--- a/public/ForgotPassword.html
+++ b/public/ForgotPassword.html
@@ -19,7 +19,7 @@
 
     .left-section {
       flex: 1;
-      background-image: url('img/loginbanner (2).jpg');
+      background-image: url('img/forgetpassworddarkslate.jpg');
       background-size: cover;
       background-position: center;
       color: white;
@@ -102,7 +102,6 @@
 <body>
   <div class="container">
     <div class="left-section">
-      <h1>Discover.<br>Save.<br>Share your<br>favorite books.</h1>
     </div>
     <div class="right-section">
       <div class="back-arrow" onclick="window.location.href='/auth/login'">&larr;</div>
