--- a/public/checkout.html
+++ b/public/checkout.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Checkout | Bookshelf</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Cormorant:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="checkout.css" />
   <script src="https://www.paypal.com/sdk/js?client-id=AT9BqNJTCTq5te_CuJKTenoHGQokRfxj49Tm8dm0b-demj7OWGbKMmCbEYOmklCmfBKwOLaIgbyTbbug"></script>
 </head>
@@ -15,7 +16,7 @@
     <img src="img/Frame 3.png" alt="Logo">
   </div>
 
-  <nav style="flex: 1; display: flex; justify-content: center; gap: 1.5rem; font-size: 1rem;">
+  <nav style="flex: 1; display: flex; justify-content: center; gap: 2.5rem; font-size: 1rem;">
     <a href="main.html">Home</a>
     <a href="product.html">Shop</a>
     <a href="checkout.css" class="active" style="font-weight: bold; border-bottom: 2px solid #2e3d59; padding-bottom: 2px;">Checkout</a>
@@ -70,7 +71,7 @@
     <div class="wrapper">
       <div class="footer-left">
         <div class="footer-logo">
-          <img src="img/Frame 3.png" alt="Bookshelf Logo" class="w-[120px] mb-2 bg-white p-1 rounded">
+          <div class="logo-text">BOOK<span class="light">SHELF</span></div>
           <div class="tagline">ESCAPE INTO STORIES</div>
         </div>
       </div>
