--- a/public/product.html
+++ b/public/product.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookstore - Product List</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="csssss.css">
     <script defer src="script.js"></script> 
 </head>
@@ -114,7 +115,7 @@
     <div class="wrapper">
       <div class="footer-left">
         <div class="footer-logo">
-          <img src="img/Frame 3.png" alt="Bookshelf Logo" class="w-[120px] mb-2 bg-white p-1 rounded">
+          <div class="logo-text">BOOK<span class="light">SHELF</span></div>
           <div class="tagline">ESCAPE INTO STORIES</div>
         </div>
       </div>
