--- a/public/profile.html
+++ b/public/profile.html
@@ -6,9 +6,11 @@
   <title>My Blog Posts | The Literary Vault</title>
   <link rel="stylesheet" href="blogcss.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+
   <style>
     body {
-      font-family: 'Cormorant', serif;
+      font-family: "Cormorant Garamond", serif;
       background-color: #f9f9f9;
       margin: 0;
     }
