--- a/public/About us.html
+++ b/public/About us.html
@@ -5,54 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bookshelf | About</title>
         <script src="https://cdn.tailwindcss.com"></script>
-        <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
         <style>
-            body { font-family: 'Cormorant', serif; }
+            body {   font-family: "Cormorant Garamond", serif; }
         </style>
     </head>
-    <body class="bg-white text-black pt-3">
+    <body class="bg-white text-black">
         <div class="fixed top-0 left-0 h-[3px] bg-gray-700 z-50 transition-all duration-300" id="scroll-progress"></div>
-
-    <nav class="bg-white px-6 py-3 relative z-50">
-    <div class="max-w-7xl mx-auto flex items-center justify-between">
-        <div class="flex items-center space-x-3">
-        <img src="img/Frame 3.png" alt="Bookshelf Logo" class="h-10">
-        </div>
-
-        <button id="menu-toggle" class="md:hidden text-gray-800 focus:outline-none">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2"
-            viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
-        </button>
-
-        <div class="hidden md:absolute md:left-1/2 md:transform md:-translate-x-1/2 md:flex">
-        <ul class="flex space-x-6 text-gray-800 text-lg font-medium">
-            <li><a href="#" class="hover:text-[#1d2a3d]">Home</a></li>
-            <li><a href="#" class="hover:text-[#1d2a3d]">Shop</a></li>
-            <li><a href="#" class="font-bold border-b-2 border-[#1d2a3d] pb-1">About us </a></li>
-            <li><a href="#" class="hover:text-[#1d2a3d]">Orders</a></li>
-        </ul>
-        </div>
-    </div>
-
-    <div id="mobile-menu" class="md:hidden hidden mt-4 px-6">
-        <ul class="flex flex-col space-y-4 text-gray-800 text-base font-medium">
-        <li><a href="#" class="hover:text-[#1d2a3d]">Blogs</a></li>
-        <li><a href="#" class="hover:text-[#1d2a3d]">Events</a></li>
-        <li><a href="#" class="hover:text-[#1d2a3d]">Shop</a></li>
-        <li><a href="#" class="hover:text-[#1d2a3d]">About Us</a></li>
-        </ul>
-    </div>
-    </nav>
-
-
-        <section class="relative h-[60vh] flex items-center justify-center text-white text-center mt-16 bg-fixed bg-cover bg-center" style="background-image: url('img/test1.jpg')">
+        <section class="relative h-[60vh] flex items-center justify-center text-white text-center bg-fixed bg-cover bg-center" style="background-image: url('img/aboutusbanner\ \(3\).jpg')">
             <div class="absolute inset-0 bg-black bg-opacity-40"></div>
             <h1 class="relative text-4xl md:text-5xl px-4 max-w-3xl animate-[slideUp_1.2s_ease-out]">Discover the World of Literature</h1>
         </section>
 
-        <section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8 px-[5%] py-16 bg-gray-50">
+        <section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8 px-[5%] py-16">
             <div class="text-center p-8 bg-white rounded shadow hover:shadow-lg transition-transform transform hover:-translate-y-2 hover:scale-105 cursor-pointer">
                 <div class="text-3xl text-gray-700 font-semibold mb-2">15K+</div>
                 <p>Books in Collection</p>
@@ -105,7 +70,7 @@ Today, our curated collections span 25 diverse genres, offering everything from 
             </div>
         </section>
 
- <section class="bg-gray-50 px-[5%] py-16">
+ <section class="px-[5%] py-16">
     <h2 class="text-center text-3xl font-semibold font-heading mb-12 text-gray-800">Leadership Team</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8">
       
