--- a/public/Login page.html
+++ b/public/Login page.html
@@ -6,6 +6,8 @@
     <title>Login | Bookshelf</title>
     <link rel="stylesheet" href="login-pag.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Cormorant&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <section class="login-wrapper">
