--- a/public/blogdetails.html
+++ b/public/blogdetails.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Book Review | Literary Chronicle</title>
   <link rel="stylesheet" href="blogdetails.css">
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<style>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+  <style>
     .comment.reply {
       margin-left: 30px;
       border-left: 2px solid #ccc;
@@ -177,7 +177,7 @@ padding: 0;
 }
 .nav-container {
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 20px auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
