--- a/public/chat.html
+++ b/public/chat.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BookBound Messenger</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Nunito&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+
     <style>
     * {
       box-sizing: border-box;
@@ -12,7 +14,7 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Nunito', sans-serif;
+      font-family: "Cormorant Garamond", serif; 
       background: linear-gradient(145deg, #f0ebe1, #e4ded5);
       height: 100vh;
       display: flex;
