--- a/public/pricing.html
+++ b/public/pricing.html
@@ -6,9 +6,10 @@
   <title>Pricing | Bookshelf</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Cormorant', serif;
+      font-family: "Cormorant Garamond", serif;
     }
     @keyframes fade-up {
       0% { opacity: 0; transform: translateY(20px); }
@@ -19,21 +20,21 @@
 </head>
 <body class="bg-white text-gray-800 flex flex-col min-h-screen">
 
-<header class="flex items-center justify-between px-6 py-4 bg-gray-100 shadow-md">
+<header class="flex items-center justify-between px-6 py-4">
   <div class="flex items-center space-x-3">
-    <img src="img/Frame 3.png" alt="Logo" class="h-10">
+    <img src="img/Frame 3.png" alt="Logo" class="h-10  ml-8">
   </div>
   <nav class="flex space-x-6 text-lg">
     <a href="blog.html" class="hover:text-blue-600">Blogs</a>
     <a href="#" class="hover:text-blue-600">Shop</a>
   <a href="#" class="text-blue-600 font-semibold border-b-2 border-blue-600">Pricing</a>
-    <a href="product.html" class="text-blue-600 font-semibold border-b-2 border-blue-600">Orders</a>
+    <a href="product.html" class="hover:text-blue-600">Orders</a>
   </nav>
   <div class="w-[120px]"></div> 
 </header>
 
   <main class="flex-1">
-    <section class="bg-gradient-to-br from-gray-50 to-gray-100 py-14 text-center px-4">
+    <section class="py-14 text-center px-4">
       <h1 class="text-3xl md:text-4xl font-bold text-[#2C3E50] mb-4">Choose the Plan That Fits You Best</h1>
       <p class="max-w-2xl mx-auto text-gray-600 leading-relaxed">
         Dive into a world filled with stories, emotions, and knowledge. Our platform opens the doors to literature in all its forms—whether it’s timeless classics, contemporary novels, poetry, or thought-provoking essays. Whether you're a passionate reader or simply curious to explore, you'll find a space here dedicated to discovery, sharing, and a true love for books.
