--- a/public/register.html
+++ b/public/register.html
@@ -6,6 +6,8 @@
   <title>Register | Bookshelf</title>
   <link rel="stylesheet" href="register.css" />
   <link href="https://fonts.googleapis.com/css2?family=Cormorant&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <section class="register-wrapper">
@@ -38,7 +40,6 @@
             <input type="checkbox" id="showPassword" onclick="togglePasswordVisibility()" />
             <label for="showPassword">Show Passwords</label>
           </div>
-
           <div class="form-action">
             <button type="submit" class="btn-submit">Sign Up</button>
           </div>
@@ -51,7 +52,7 @@
 
 <div class="register-left" style="position: relative;"> 
     <div class="image-overlay"></div>
-    <img src="img/registerbanner (3).jpg" alt="Bookshelf" class="register-image" />
+    <img src="img/registerfinal (2).jpg" alt="Bookshelf" class="register-image" />
 <img src="img/Frame 3.png" alt="Logo"
      style="position: absolute; top: 10px; right: 10px; height: 50px;
             background-color: white; padding: 5px; border-radius: 5px;">
