--- a/public/thak-youform.html
+++ b/public/thak-youform.html
@@ -16,7 +16,7 @@
 <body class="flex items-center justify-center min-h-screen bg-gray-100">
   <main class="bg-white p-8 rounded-2xl shadow-lg text-center max-w-md w-full">
     <h1 class="text-4xl font-bold mb-4 text-[#2C3E50]">Thank You!</h1>
-    <p class="text-lg mb-6 text-[#2C3E50]">Your order has been placed and your payment was successful.</p>
+    <p class="text-lg mb-6 text-[#2C3E50]">Thank you for getting in touch with us! We’ve received your form submission and will get back to you shortly. You can expect to hear from us within 1-2 business days.</p>
     <a href="main.html" class="inline-block px-6 py-3 bg-[#2C3E50] text-white font-semibold rounded-lg hover:bg-[#1a242f] transition">Back to Home</a>
   </main>
 </body>
