--- a/public/wishlist.html
+++ b/public/wishlist.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <title>My Wishlist</title>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Cormorant', serif;
+      font-family: "Cormorant Garamond", serif;
       font-size: 1rem;
     }
 
@@ -41,7 +43,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      font-family: Arial, sans-serif;
+      font-family: "Cormorant Garamond", serif;
     }
 
     .navbar-left {
@@ -197,6 +199,9 @@
         justify-content: center;
       }
     }
+    .logo{
+      margin-left: 20px;
+    }
   </style>
 </head>
 <body>
@@ -206,9 +211,9 @@
   </div>
 <ul class="nav-links">
   <li><a href="main.html">Home</a></li>
-  <li><a href="shop.html">Shop</a></li>
+  <li><a href="product.html">Shop</a></li>
   <li><a href="wishlist.html" class="active">Wishlist</a></li>
-  <li><a href="orders.html">Orders</a></li>
+  <li><a href="order.html">Orders</a></li>
 </ul>
 </nav>
 
